--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,19 @@
-.App {
-  text-align: center;
+* { 
+  -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box; 
+   box-sizing: border-box; 
+}
+
+html, body {
+  margin: 0px;
+  padding: 0px;
+  // width: 100vw;
+  overflow: hidden;
+}
+
+h1, h2, h3, h4, h5, h6, p, span {
+  margin: 0px;
+  padding: 0px;
 }
 
 .App-logo {
