--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,8 @@ html, body {
   padding: 0px;
   // width: 100vw;
   overflow: hidden;
+  background-color: #111;
+  color: white;
 }
 
 h1, h2, h3, h4, h5, h6, p, span {
