--- a/src/home_page/home_page_styles.scss
+++ b/src/home_page/home_page_styles.scss
@@ -1,4 +1,15 @@
+@import "../styles/global.scss";
+
 .home_page {
+  position: relative;
   width: 100vw;
   height: 100vh;
+  
+  @include breakpoint(tablet) {
+    padding-bottom: 80px;
+  }
+
+  @include breakpoint(mobile) {
+    padding-bottom: 64px;
+  }
 }
