--- a/src/slides/slide_styles.scss
+++ b/src/slides/slide_styles.scss
@@ -2,4 +2,12 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  transition: opacity 300ms;  
+}
+
+.slide_inactive {
+  @extend .slide;
+
+  opacity: 0.0;
+  pointer-events: none;
 }
