--- a/src/home_page/contact_me_slide/contact_me_slide_styles.scss
+++ b/src/home_page/contact_me_slide/contact_me_slide_styles.scss
@@ -37,10 +37,19 @@
       }
   
       .contact_info_items {
-        margin-top: 8px;
+        margin-top: 32px;
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+
         .item {
+          display: flex;
+          align-items: center;
+          gap: 16px;          
+
           .leading {
-            
+            font-size: 32px;
+            color: var(--accent-color);
           }
   
           .text_area {
