Made contact me form have two name and email input in same line

--- a/src/home_page/contact_me_slide/contact_me_slide_styles.scss
+++ b/src/home_page/contact_me_slide/contact_me_slide_styles.scss
@@ -77,8 +77,12 @@
       .first_row {
         width: 100%;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
         gap: $space;
+
+        @include breakpoint(mobile) {
+          grid-template-columns: auto;
+        }
       }
 
       input, textarea {
