Changed up works_card.

--- a/src/home_page/hero_slide/hero_slide_styles.scss
+++ b/src/home_page/hero_slide/hero_slide_styles.scss
@@ -84,7 +84,7 @@
     .text_area {      
       display: flex;
       flex-direction: column;
-      max-width: 600px;
+      max-width: 70vw;
       justify-content: center;
       align-items: center;
       text-align: center;
