--- a/src/home_page/works_slide/works_slide_styles.scss
+++ b/src/home_page/works_slide/works_slide_styles.scss
@@ -41,7 +41,7 @@
   .works {
     margin-top: 32px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 32px;
 
     @include breakpoint(tablet) {
@@ -51,32 +51,44 @@
     .work_card {
       position: relative;
       width: 100%;
-      height: 256px;
+      height: 320px;      
       background-color: red;
-      background-size: cover;
       border-radius: 8px;
       overflow: hidden;
       cursor: pointer;
+      
+      &:hover {        
+        border: 3px solid var(--accent-color);
+      }
 
-      &::after {
+      img {
         position: absolute;
-        display: flex;
-        left: 0px;
         top: 0px;
+        bottom: 0px;
         width: 100%;
         height: 100%;
-        background-color: var(--accent-color);
+        object-fit: cover;
+        filter: brightness(0.7);
+      }
+
+      .title {
+        position: absolute;
+        display: flex;
+        left: 32px;
+        bottom: 32px;
         justify-content: center;
         align-items: center;        
         color: white;
-        font-size: 1.2em;
-        opacity: 0.0;
-        transition: opacity 500ms;        
-      }
+        font-size: 1.3em;
+        font-weight: 700;              
+      }          
+    }
+
+
+    .work_card_hover {
+      @extend .work_card;
       
-      &:hover::after {
-        opacity: 1.0;
-      }
+      
     }
   }
 }
