--- a/src/home_page/works_slide/works_slide_styles.scss
+++ b/src/home_page/works_slide/works_slide_styles.scss
@@ -16,28 +16,6 @@
     padding-right: 16px;
   }
 
-  .heading {
-    position: relative;
-    font-size: 114px;
-    font-weight: 800;  
-    text-align: center;
-    color: rgba(white, 0.05);
-
-    .overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      font-size: 0.5em;
-      color: white;
-      content: 'ABOUT ME';
-      transform: translate(-50%, -50%);
-
-      .yellow {
-        color: var(--accent-color);
-      }
-    }
-  }
-
   .works {
     margin-top: 32px;
     display: grid;
@@ -51,14 +29,17 @@
     .work_card {
       position: relative;
       width: 100%;
-      height: 320px;      
-      background-color: red;
+      height: 320px;
       border-radius: 8px;
       overflow: hidden;
       cursor: pointer;
+
+      @include breakpoint(tablet) {
+        height: 512px;
+      }
       
       &:hover {        
-        border: 3px solid var(--accent-color);
+        border: 4px solid var(--accent-color);
       }
 
       img {
@@ -71,17 +52,15 @@
         filter: brightness(0.7);
       }
 
-      .title {
-        position: absolute;
-        display: flex;
+      .text_area {
+        position: absolute;        
         left: 32px;
         bottom: 32px;
-        justify-content: center;
-        align-items: center;        
-        color: white;
-        font-size: 1.3em;
-        font-weight: 700;              
-      }          
+
+        .subtitle {
+          color: rgba(white, 0.7);
+        }
+      }
     }
 
 
