--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,11 @@ h1 {
   font-size: 2.5rem;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 button {
   min-width: 200px;
   min-height: 56px;
