--- a/src/home_page/works_slide/works_slide_styles.scss
+++ b/src/home_page/works_slide/works_slide_styles.scss
@@ -37,6 +37,10 @@
       @include breakpoint(tablet) {
         height: 512px;
       }
+
+      @include breakpoint(mobile) {
+        height: 256px;
+      }
       
       &:hover {        
         border: 4px solid var(--accent-color);
@@ -50,6 +54,10 @@
         height: 100%;
         object-fit: cover;
         filter: brightness(0.7);
+      }
+
+      @include breakpoint(tablet) {
+        filter: none;
       }
 
       .text_area {
