--- a/src/home_page/navigator/navigator_styles.scss
+++ b/src/home_page/navigator/navigator_styles.scss
@@ -30,11 +30,16 @@
     background-color: var(--accent-color);
   }
 
-  .icon_button {
-    margin-left: 16px;
+  .icon_button {  
+    margin-top: 32px;
+
+    @include breakpoint(tablet) {
+      margin-top: 0px;
+      margin-left: 32px;
+    }
 
     &:nth-child(1) {
-      margin-left: 0px;
+      margin: 0px;      
     }
   }
 }
